[gd_scene load_steps=10 format=3 uid="uid://cci5lph7o8fg5"]

[ext_resource type="Script" uid="uid://c2u2e7rvja8k" path="res://components/apps/minerr/minerr_ui.gd" id="2_0t4uf"]
[ext_resource type="PackedScene" uid="uid://cd6b75613o34u" path="res://components/apps/minerr/crypto_card.tscn" id="3_ykms3"]
[ext_resource type="Texture2D" uid="uid://brs7oc40iion5" path="res://assets/cursors/pickaxe.png" id="4_23boj"]
[ext_resource type="Shader" uid="uid://n1vlc8cxnun0" path="res://assets/shaders/warp_shader.gdshader" id="5_23boj"]
[ext_resource type="FontFile" uid="uid://cbjispsewggqv" path="res://assets/fonts/GALS.ttf" id="8_x88rl"]
[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/themes/windows_95_theme.tres" id="9_0t4uf"]
[ext_resource type="Script" uid="uid://bkxfxbb443cnq" path="res://components/ui/pane_nav_bar.gd" id="10_navbar"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wupxk"]
resource_local_to_scene = true
shader = ExtResource("5_23boj")
shader_parameter/stretch = 0.8
shader_parameter/thing1 = 0.6
shader_parameter/thing2 = 0.6
shader_parameter/thing3 = 0.8
shader_parameter/scale = 1.0
shader_parameter/speed = 0.03
shader_parameter/color_low = Color(0.03, 0.02, 0.02, 1)
shader_parameter/color_mid = Color(0.12, 0.08, 0.05, 1)
shader_parameter/color_high = Color(0.35, 0.22, 0.15, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6dwf"]
bg_color = Color(0, 0, 0, 1)

[node name="Minerr" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("2_0t4uf")
crypto_card_scene = ExtResource("3_ykms3")
window_title = "Minerr"
window_icon = ExtResource("4_23boj")
app_description = "Mine & Trade cryptocurrencies"
default_window_size = Vector2(630, 500)
color1 = Color(0.03, 0.02, 0.02, 1)
color2 = Color(0.12, 0.08, 0.05, 1)
color3 = Color(0.35, 0.22, 0.15, 1)

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_wupxk")
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_v6dwf")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_x88rl")
theme_override_font_sizes/font_size = 36
text = " Minerr"

[node name="PaneNavBar" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("10_navbar")

[node name="MineView" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MineView"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MineView"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftColumnVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0

[node name="SortHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="SortPropertyOption" type="OptionButton" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/SortHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="SortDirectionButton" type="Button" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/SortHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = " "

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="GPUsLabel" type="Label" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "GPUs 
Free/Owned: 
0/0"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 4

[node name="BuGPUsVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer"]
layout_mode = 2

[node name="BuyNewGPUButton" type="Button" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
text = "Buy New GPU"

[node name="NewGPUPriceLabel" type="Label" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer"]
visible = false
layout_mode = 2

[node name="BuyUsedGPUButton" type="Button" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Used GPUs have a chance of burning out"
focus_mode = 0
text = "Buy Used GPU"

[node name="UsedGPUPriceLabel" type="Label" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CryptoContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MineView/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme = ExtResource("9_0t4uf")

[node name="ChartsView" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ChartsTopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ChartsView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChartsCashLabel" type="Label" parent="MarginContainer/VBoxContainer/ChartsView/ChartsTopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Cash: $"

[node name="ChartsCryptoLabel" type="Label" parent="MarginContainer/VBoxContainer/ChartsView/ChartsTopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Crypto: $"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/ChartsView"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer/VBoxContainer/BuyNewGPUButton" to="." method="_on_buy_new_gpu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MineView/HBoxContainer/LeftColumnVBox/VBoxContainer/BuGPUsVBoxContainer/VBoxContainer2/BuyUsedGPUButton" to="." method="_on_buy_used_gpu_button_pressed"]
